# ruz-finder

./: .gitattributes  .gitignore  LICENSE  README.md  default.nix  docker.nix  flake.nix  module.nix  release.sh  ruz-finder.cabal  shell.nix  stack.yaml
app/: Consts.hs  Main.hs  QueryPerson.hs  Ruz.hs  TgBot.hs  Utils.hs  VK.hs
app/OVD/: HTML.hs  Types.hs
app/Polysemy/: Cache.hs
app/VK/: Core.hs  Find.hs  Interpreter.hs
nix/: module.nix
