name:                ruz-finder
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable ruz-finder
  main-is:             Main.hs
  other-modules:       OVD.Types OVD.HTML
                     , Polysemy.Cache
                     , VK.Core VK.Interpreter VK.Find VK
                     , Consts
                     , QueryPerson
                     , Ruz
                     , Utils
  hs-source-dirs:      app
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveGeneric
                     , DeriveFunctor
                     , DuplicateRecordFields
                     , ExistentialQuantification
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , ImportQualifiedPost
                     , OverloadedStrings
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , QuasiQuotes
                     , Rank2Types
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , UnicodeSyntax
  build-depends:       aeson
                     , ascii-progress
                     , async-pool
                     , base
                     , containers
                     , http-client
                     , lens
                     , math-functions
                     , polysemy
                     , polysemy-conc
                     , polysemy-http
                     , polysemy-log
                     , regex
                     , scalpel
                     , split
                     , stm
                     , stm-delay
                     , text
