name:                ruz-finder
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable ruz-finder
  main-is:             Main.hs
  other-modules:       OVD.Types OVD.HTML QueryPerson Ruz VK VK.Find TgBot Consts Utils
  hs-source-dirs:      app
  ghc-options:         -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N -I0"
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , BlockArguments
                     , DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingStrategies
                     , DuplicateRecordFields
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NumericUnderscores
                     , OverloadedStrings
                     , QuasiQuotes
                     , Rank2Types
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , UnicodeSyntax
  build-depends:       adjunctions
                     -- , ascii-progress
                     , async-pool
                     , base
                     , containers
                     -- , monad-memo
                     , mtl
                     , regex
                     , req, aeson
                     , scalpel
                     , servant-client
                     , split
                     -- , stm
                     -- , stm-delay
                     , telegram-bot-simple
                     , text
